Added a popup to the historic evolutions pane. Hovering over a button for a second will show a tooltip with the digimon name.

--- a/DigimonWorldNet6/Frontend.WPF/App.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/App.xaml
@@ -247,6 +247,16 @@
                 </Setter.Value>
             </Setter>
         </Style>
+        
+        <Style TargetType="ToolTip">
+            <Setter Property="Background" Value="#354A5B" />
+            <Setter Property="BorderBrush" Value="#4A9FC5" />
+            <Setter Property="BorderThickness" Value="1" />
+            <Setter Property="Padding" Value="5" />
+            <Setter Property="Placement" Value="Right" />
+            <Setter Property="Foreground" Value="#D6D6D8" />
+            <Setter Property="FontSize" Value="14" />
+        </Style>
 
     </Application.Resources>
 </Application>
