Session is a single source of truth for all current evolution related data. Both the FE and BE can use this and serves as a way of sharing information. ServiceRelay is a (single source) provider of the backend functionality to the FE. This way There is no intricate coding required like sharing/inheriting/injecting viewmodels and what not. Implemented the historic evolutions functionality in the calculator.

--- a/DigimonWorldNet6/Frontend.WPF/UserControls/EvolutionTool/EvolutionToolUserControl.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/UserControls/EvolutionTool/EvolutionToolUserControl.xaml
@@ -180,7 +180,7 @@
                     <Label Grid.Column="0" Grid.Row="11" Content="Battles:" Style="{StaticResource DefaultLabelStyle}" />
                     <TextBox Name="Battles" Grid.Column="1" Grid.Row="11" Style="{StaticResource DefaultTextBoxStyle}">
                         <TextBox.Text>
-                            <Binding Path="Discipline" UpdateSourceTrigger="LostFocus">
+                            <Binding Path="Battles" UpdateSourceTrigger="LostFocus">
                                 <Binding.ValidationRules>
                                     <nonCombatStatValidation:BattlesValidationRule ValidationStep="CommittedValue" />
                                 </Binding.ValidationRules>
