--- a/DigimonWorldNet6/Frontend.WPF/UserControls/HistoricEvolutionPicker/HistoricEvolutionPickerUserControl.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/UserControls/HistoricEvolutionPicker/HistoricEvolutionPickerUserControl.xaml
@@ -5,11 +5,10 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:system="clr-namespace:System;assembly=System.Runtime"
              xmlns:constants="clr-namespace:DigimonWorld.Frontend.WPF.Constants"
-             xmlns:mainWindow="clr-namespace:DigimonWorld.Frontend.WPF.Windows.MainWindow"
              xmlns:conversion="clr-namespace:DigimonWorld.Frontend.WPF.Conversion"
+             xmlns:historicEvolutionPicker="clr-namespace:DigimonWorld.Frontend.WPF.UserControls.HistoricEvolutionPicker"
              mc:Ignorable="d"
-             d:DataContext="{d:DesignInstance mainWindow:MainWindowViewModel}"
-             DataContext="{Binding DataContext, RelativeSource={RelativeSource AncestorType={x:Type Window}}}">
+             d:DataContext="{d:DesignInstance Type=historicEvolutionPicker:HistoricEvolutionPickerViewModel, IsDesignTimeCreatable=True}">
 
     <UserControl.Resources>
         <ResourceDictionary>
@@ -34,7 +33,7 @@
             <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="400" />
         </Grid.RowDefinitions>
 
