--- a/DigimonWorldNet6/Frontend.WPF/UserControls/EvolutionTool/EvolutionToolUserControl.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/UserControls/EvolutionTool/EvolutionToolUserControl.xaml
@@ -375,7 +375,7 @@
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
-            <Grid>
+            <Grid Grid.Row="0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="175" />
                     <ColumnDefinition Width="600" />
@@ -448,9 +448,9 @@
             </Grid>
             <Grid Grid.Row="1">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="350" />
-                    <ColumnDefinition Width="50" />
-                    <ColumnDefinition Width="350" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
                 <Border Grid.Column="0" Grid.Row="0" BorderBrush="#060100" BorderThickness="3,3,0,0" Margin="15" HorizontalAlignment="Center" VerticalAlignment="Bottom">
                     <Border BorderBrush="#6789A5" BorderThickness="0,0,3,3" Background="#354A5B">
@@ -458,7 +458,7 @@
                     </Border>
                 </Border>
 
-                <Image Grid.Column="1" Grid.Row="0" Height="100" Source="/Images/Misc/Arrow-Right.png" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                <Image Grid.Column="1" Grid.Row="0" Height="85" Source="/Images/Misc/Arrow-Right.png" HorizontalAlignment="Center" VerticalAlignment="Center" />
 
                 <Border Grid.Column="2" Grid.Row="0" BorderBrush="#060100" BorderThickness="3,3,0,0" Margin="15" HorizontalAlignment="Center" VerticalAlignment="Bottom">
                     <Border BorderBrush="#6789A5" BorderThickness="0,0,3,3" Background="#354A5B">
