--- a/DigimonWorldNet6/Frontend.WPF/UserControls/EvolutionTool/EvolutionToolUserControl.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/UserControls/EvolutionTool/EvolutionToolUserControl.xaml
@@ -571,8 +571,7 @@
                                                VerticalAlignment="Top"
                                                Margin="0, 5"
                                                Width="545"
-                                               TextWrapping="Wrap">
-                                    </TextBlock>
+                                               TextWrapping="Wrap" />
                                 </StackPanel>
                             </Border>
                         </Border>
