--- a/DigimonWorldNet6/Frontend.WPF/Windows/MainWindow/MainWindow.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/MainWindow/MainWindow.xaml
@@ -7,6 +7,7 @@
         xmlns:evolutionTool="clr-namespace:DigimonWorld.Frontend.WPF.UserControls.EvolutionTool"
         xmlns:local="clr-namespace:DigimonWorld.Frontend.WPF.Windows.MainWindow"
         xmlns:historicEvolutionPicker="clr-namespace:DigimonWorld.Frontend.WPF.UserControls.HistoricEvolutionPicker"
+        xmlns:musicPlayer="clr-namespace:DigimonWorld.Frontend.WPF.UserControls.MusicPlayer"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance Type=local:MainWindowViewModel, IsDesignTimeCreatable=True}"
         Title="Digimon World Tool"
@@ -274,6 +275,91 @@
 
                 <!-- Overlay Text -->
                 <TextBlock Text="Historic Evolutions"
+                           HorizontalAlignment="Center"
+                           VerticalAlignment="Center"
+                           FontWeight="Bold"
+                           TextAlignment="Center">
+
+                    <TextBlock.Style>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="FontFamily" Value="{StaticResource Dw1Font}" />
+                            <Setter Property="FontWeight" Value="Bold" />
+                            <Setter Property="Foreground" Value="#D6D6D8" />
+                            <Style.Triggers>
+                                <!-- Change color based on BottomPaneIsOpen -->
+                                <DataTrigger Binding="{Binding BottomPaneIsOpen}" Value="True">
+                                    <Setter Property="Foreground" Value="Black" /> <!-- Color when open -->
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </TextBlock.Style>
+                    <b:Interaction.Triggers>
+                        <b:EventTrigger EventName="MouseLeftButtonDown">
+                            <b:InvokeCommandAction Command="{Binding ToggleBottomPaneCommand}" />
+                        </b:EventTrigger>
+                    </b:Interaction.Triggers>
+                </TextBlock>
+            </Grid>
+
+            <!-- DataTrigger to Play the Animation -->
+            <Grid.Style>
+                <Style TargetType="Grid">
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding BottomPaneIsOpen}" Value="True">
+                            <DataTrigger.EnterActions>
+                                <BeginStoryboard Storyboard="{StaticResource OpenBottomPane}" />
+                            </DataTrigger.EnterActions>
+                            <DataTrigger.ExitActions>
+                                <BeginStoryboard Storyboard="{StaticResource CloseBottomPane}" />
+                            </DataTrigger.ExitActions>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Grid.Style>
+        </Grid>
+        
+        <!-- Left Pane -->
+        <Grid Grid.Row="2" Grid.Column="0" Background="Transparent" SnapsToDevicePixels="True" UseLayoutRounding="True" RenderTransformOrigin="0.5,0.5" Panel.ZIndex="0">
+            <Grid.RenderTransform>
+                <!-- Start fully closed -->
+                <TranslateTransform Y="-475" />
+            </Grid.RenderTransform>
+
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="500"></RowDefinition>
+            </Grid.RowDefinitions>
+
+            <!-- FlaggedEvolutionPickerUserControl in Bottom Pane -->
+            <Border Grid.Row="0" Grid.Column="1" Background="Transparent" Panel.ZIndex="1">
+                <Border CornerRadius="5" BorderBrush="Black" BorderThickness="3" Padding="0" Background="Black">
+                    <Border CornerRadius="5" BorderBrush="#4A9FC5" BorderThickness="3" Padding="0" Background="#4A9FC5">
+                        <Border CornerRadius="5" BorderBrush="#90D9FA" BorderThickness="3" Padding="0" Background="#90D9FA">
+                            <Border CornerRadius="5" BorderBrush="Black" BorderThickness="3" Padding="10" Background="#2E3841">
+                                <musicPlayer:MusicPlayerUserControl VerticalAlignment="Center"/>
+                            </Border>
+                        </Border>
+                    </Border>
+                </Border>
+            </Border>
+
+            <!-- Image with Command Binding -->
+            <Grid Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Background="Transparent">
+                <Image Style="{StaticResource LeftPaneLabelStyle}" Margin="0,-2, 0, 0">
+                    <b:Interaction.Triggers>
+                        <b:EventTrigger EventName="MouseLeftButtonDown">
+                            <b:InvokeCommandAction Command="{Binding ToggleBottomPaneCommand}" />
+                        </b:EventTrigger>
+                    </b:Interaction.Triggers>
+                </Image>
+
+                <!-- Overlay Text -->
+                <TextBlock Text="JukeBox"
                            HorizontalAlignment="Center"
                            VerticalAlignment="Center"
                            FontWeight="Bold"
