Fixed the side pane for the jukebox. It now opens and closes independently of the bottom pane. Also fixed the MainWindowViewModel.BottomPaneIsOpen using the _leftPaneIsOpen backingfield instead of _bottomPaneIsOpen

--- a/DigimonWorldNet6/Frontend.WPF/UserControls/MusicPlayer/MusicPlayerUserControl.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/UserControls/MusicPlayer/MusicPlayerUserControl.xaml
@@ -7,7 +7,7 @@
              xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
              xmlns:system="clr-namespace:System;assembly=System.Runtime"
              mc:Ignorable="d"
-             d:DataContext="{d:DesignInstance musicPlayer:MusicPlayerViewModel}">
+             d:DataContext="{d:DesignInstance Type=musicPlayer:MusicPlayerViewModel, IsDesignTimeCreatable=True}">
 
     <UserControl.Resources>
         <ResourceDictionary>
